--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,24 @@
 body{
 
-    color:pink;
+    color:darkslategrey;
     text-align: center;
     font-family: Arial;
+}
+
+
+#cabecera{
+
+    background: blueviolet;
+    color:white;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#container{
+
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
